--- a/inventory_management/requirements.txt
+++ b/inventory_management/requirements.txt
@@ -1,6 +1,6 @@
 Django==3.2.7
 djangorestframework==3.12.4
-psycopg2-binary==2.9.1
+psycopg2==2.9.1
 djangorestframework-simplejwt==4.7.2
 drf-yasg==1.20.0
 requests==2.26.0
